JumpScript/tests/baselines/reference/initializedDestructuringAssignmentTypes.errors.txt
tests/cases/compiler/initializedDestructuringAssignmentTypes.jump(3,3): error TS2339: Property 'toFixed' does not exist on type 'string'.


==== tests/cases/compiler/initializedDestructuringAssignmentTypes.jump (1 errors) ====
    const [, a = ''] = ''.match('') || [];
    
    a.toFixed()
      ~~~~~~~
!!! error TS2339: Property 'toFixed' does not exist on type 'string'.